joos1syntax/test/pos/SimpleIf0.java
public class SimpleIf0 {
  public SimpleIf0() {
    if (true);
  }
}
