joos1syntax/test/neg/BadIf2.java
public class BadIf2 {
  public BadIf2() {
    if ();
  }
}
